--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: plutotreetree
 github_username:  plutotree
 
+tencent_analytics: 1
+
 # Build settings
 markdown: kramdown
 theme: minima
