--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: plutotreetree@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I am thinking about what to write...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://plutotree.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: plutotreetree
 github_username:  plutotree
 
