--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   I am thinking about what to write...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://plutotree.me" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: plutotreetree
+twitter_username: 
 github_username:  plutotree
 
 tencent_analytics: 1
