--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,4 +2,4 @@ valine_comment:
   enable: true
   leancloud_appid: J5NixkF8qVNfHXdDcs7g0mHJ-gzGzoHsz
   leancloud_appkey: AwVytl9RdE1qJbSx2Ud3DnS7
-  placeholder: just go go
+  placeholder: 支持markdown语法，昵称可以填写QQ号
