--- a/_config_cn.yml
+++ b/_config_cn.yml
@@ -35,6 +35,10 @@ theme: minima
 plugins:
   - jekyll-feed
 
+exclude:
+  - publish_cn.sh
+  - Gemfile.lock
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
