--- a/_config_cn.yml
+++ b/_config_cn.yml
@@ -20,7 +20,7 @@ email: plutotreetree@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I am thinking about what to write...
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://plutotree.me" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://plutotree.cn" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  plutotree
 
