--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "hugo/themes/LoveIt"]
 	path = hugo/themes/LoveIt
 	url = https://github.com/dillonzq/LoveIt.git
+[submodule "themes/LoveIt"]
+	path = themes/LoveIt
+	url = https://github.com/dillonzq/LoveIt.git
