--- a/hugo/hugo.toml
+++ b/hugo/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://plutotree.me"
 
 # theme
 # 主题
@@ -111,7 +111,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   # Author config
   # 作者配置
   [params.author]
-    name = "PlutoTree"
+    name = "布鲁树"
     email = "plutotreetree@gmail.com"
     link = ""
 
@@ -132,7 +132,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       logo = ""
       # title name
       # 标题名称
-      name = "LoveIt"
+      name = "PlutoTree (布鲁树)"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = "<i class='far fa-kiss-wink-heart fa-fw' aria-hidden='true'></i>"
@@ -518,9 +518,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       # Valine 评论系统设置 (https://github.com/xCss/Valine)
       [params.page.comment.valine]
         enable = true
-        appId = "QGzwQXOqs5JOhN4RGPOkR2mR-MdYXbMMI"
-        appKey = "WBmoGyJtbqUswvfLh6L8iEBr"
-        placeholder = ""
+        appId = "J5NixkF8qVNfHXdDcs7g0mHJ-gzGzoHsz"
+        appKey = "AwVytl9RdE1qJbSx2Ud3DnS7"
+        placeholder = "支持markdown语法，昵称可以填写QQ号"
         avatar = "mp"
         meta= ""
         pageSize = 10
@@ -976,20 +976,20 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         [languages.zh-cn.params.home.profile]
           enable = true
           gravatarEmail = ""
-          avatarURL = "/images/avatar.png"
+          avatarURL = "/images/avatar.jpg"
           title = ""
-          subtitle = "一个简洁、优雅且高效的 Hugo 主题"
+          subtitle = "这里是布鲁树的家 来者是客 随处逛逛"
           typeit = true
           social = true
           disclaimer = ""
       [languages.zh-cn.params.social]
         GitHub = "plutotree"
-        Weibo = "xxxx"
-        Steam = "xxxx"
-        Zhihu = "xxxx"
-        Douban = "xxxx"
-        Devto = "xxxx"
-        Bilibili = "xxxx"
+        Weibo = ""
+        Steam = ""
+        Zhihu = ""
+        Douban = ""
+        Devto = ""
+        Bilibili = ""
         Email = "plutotreetree@gmail.com"
         Phone = ""
         RSS = true
