feat: 修改文件url，另外文件中增加slug和alias

--- a/hugo.toml
+++ b/hugo.toml
@@ -769,7 +769,8 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 # Permalinks 配置 (https://gohugo.io/content-management/urls/#permalinks)
 [permalinks]
   # posts = ":year/:month/:filename"
-  posts = ":filename"
+  # posts = ":filename"
+  posts = "/:year/:month/:slug"
 
 # Privacy config (https://gohugo.io/configuration/privacy/)
 # 隐私信息配置 (https://gohugo.io/configuration/privacy/)
