--- a/hugo.toml
+++ b/hugo.toml
@@ -531,7 +531,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
         recordIP = true
         highlight = true
         enableQQ = true
-        serverURLs = "https://plutotree.me"
+        serverURLs = "https://j5nixkf8.lc-cn-n1-shared.com"
         # emoji data file name, default is "google.yml"
         # ["apple.yml", "google.yml", "facebook.yml", "twitter.yml"]
         # located in "themes/LoveIt/assets/lib/valine/emoji/" directory
