--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,10 +43,7 @@ jobs:
         env:
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
           ALGOLIA_ADMIN_KEY: ${{ secrets.ALGOLIA_ADMIN_KEY }}
-        run: |
-          algolia objects import \
-            --index-name index \
-            --file public/index.json
+        run: algolia import --index-name index --file public/index.json
 
       - name: Pushover Notification
         uses: umahmood/pushover-actions@v1.1.0
